# yt-dlp.rs

./: .gitignore  Cargo.toml  README.md  workers.js
.github/workflows/: ci.yml  release.yml
functions/: proxy.js
src/: error.rs  lib.rs  main.rs  output.rs  postprocessor.rs  selector.rs  types.rs  utils.rs  wasm.rs
src/downloader/: hls.rs  http.rs  mod.rs
src/extractor/: mod.rs  youtube.rs
tests/: live.rs
www/: app.js  cors-proxy.js  ffmpeg.min.js  index.css  index.html  server.js
www/pkg/: LICENSE  package.json  yt_dlp.d.ts  yt_dlp.js  yt_dlp_bg.wasm  yt_dlp_bg.wasm.d.ts
